File crash when trying to save this one #56270

Closed
opened 2018-08-08 02:52:23 +02:00 by Luciano Muñoz Sessarego · 8 comments

System Information
i7, 32 gb ram, gtx 1060

Blender Version
Broken: todays buildbot
Worked: dunno.

Short description of error
crash when saving this file

leon.blend

Exact steps for others to reproduce the error
open the file, try to save it, crash.
ive found that if you turn off the "GPencil" object visibility from the outliner, it wont crash and it will save, but still crashes if you turn visibility off to the modifiers or layers.

**System Information** i7, 32 gb ram, gtx 1060 **Blender Version** Broken: todays buildbot Worked: dunno. **Short description of error** crash when saving this file [leon.blend](https://archive.blender.org/developer/F4152251/leon.blend) **Exact steps for others to reproduce the error** open the file, try to save it, crash. ive found that if you turn off the "GPencil" object visibility from the outliner, it wont crash and it will save, but still crashes if you turn visibility off to the modifiers or layers.
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2018-08-08 09:59:34 +02:00

The problem is with Instance modifier, not sure why.

The problem is with Instance modifier, not sure why.

This issue was referenced by 106e73da82

This issue was referenced by 106e73da8298697e8b96d878a279bbc98bdfa6ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@LucianoMunoz I have fixed the problem but your file still has a problem with the user count of the image. This is not related to grease pencil and it looks the result of any previous crash. Maybe you could remove the image and save/reload, but not sure.

@LucianoMunoz I have fixed the problem but your file still has a problem with the user count of the image. This is not related to grease pencil and it looks the result of any previous crash. Maybe you could remove the image and save/reload, but not sure.

Added subscriber: @mont29

Added subscriber: @mont29

usercount on image shall have been fixed in 7a6d7d056b (reported as #56273).

usercount on image shall have been fixed in 7a6d7d056b (reported as #56273).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56270
No description provided.