Fix T56270: Crash when save a grease pencil file with instance modifier.

The error was related to duplicate names in the internal hash used to order instances in z-depth.